# lista-de-tarefas

backend/: manage.py  pyproject.toml
backend/lista_de_tarefas_api/: asgi.py  settings.py  urls.py  wsgi.py
backend/tarefas/: models.py  serializers.py  tests.py  urls.py  views.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx
