[tool.poetry]
name = "lista-de-tarefas-api"
version = "0.1.0"
description = "Uma API para gerenciar as tarefas com operações de CRUD."
authors = ["Wilson Rocha Neto <wilsonsrochaneto@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.2"
djangorestframework = "^3.15.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
django-extensions = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
